--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=hostelcontrol
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://172.17.0.4:3306/hostel
+spring.datasource.username=root
+spring.datasource.password=root
