--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://172.17.0.4:3306/hostel
+spring.datasource.url=jdbc:mysql://172.17.0.3/hostel
 spring.datasource.username=root
 spring.datasource.password=root
+server.servlet.context-path=/hostelcontrol
