--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,17 @@ spring.datasource.url=jdbc:mysql://172.17.0.3/hostel
 spring.datasource.username=root
 spring.datasource.password=root
 server.servlet.context-path=/hostelcontrol
+
+security.jwt.client-id=testjwtclientid
+security.jwt.client-secret=R0BR731-H0sTEl
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=testjwtresourceid
+
+
+security.oauth2.resource.filter-order=3
+
+security.signing-key=MaYzkSjmkzPC57L
+security.encoding-strength=256
+security.security-realm=Spring Boot JWT Example Realm
